--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<li><a href="#about">About</a></li> 
 								<li><a href="#event">Events</a></li> 
 								<li><a href="#team">Team</a></li> 
-								<li><a href="contact.html">Contact</a></li>
+								<li><a href="mailto://team@dreamsclub.tk">Contact</a></li>
 							</ul>
 						</div> 
 						<div class="clearfix"> </div>  
@@ -191,7 +191,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li><a href="#about"><i class="fa fa-angle-right"></i> About</a></li> 
 						<li><a href="#event"><i class="fa fa-angle-right"></i> Events</a></li>
 						<li><a href="#team"><i class="fa fa-angle-right"></i> Team</a></li>
-						<li><a href="contact.html"><i class="fa fa-angle-right"></i> Contact Us</a></li>
+						<li><a href="mailto://team@dreamsclub.tk"><i class="fa fa-angle-right"></i> Contact Us</a></li>
 					</ul>
 				</div>
 				<div class="col-md-4 col-sm-6 footer-grid footer-review">
