--- a/index.html
+++ b/index.html
@@ -93,9 +93,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<img src="images/img3.png" class="img-responsive zoom-img" alt=""/>
 						</div>
 						<div class="news-w3imgtext">
-							<h5 class="w3-agilep">2021</h5>
-							<h4><a href="single.html">DREAMS Winter Multi-Cultural Event</a></h4> 
-							<p>The DREAMS Club planned a multi-cultural event celebrating many holidays including Kwanzaa, Christmas, Hanukkah, and Bodhi Day. Throughout the event there were many fun activities and the DREAMS Club sold items for fundraising!</p>
+							<h5 class="w3-agilep">Feb 18, 2022</h5>
+							<h4>Black History Month</h4> 
+							<p>Join DREAMS to explore Black History!</p>
+							<a class="w3-agilebtn" href="https://dreamsclub0.wixsite.com/celebratedifferences/event-details/black-history-month/form"><span>RSVP</span></a>
 						</div>
 					</div>
 				</div>
@@ -106,8 +107,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</div>
 						<div class="news-w3imgtext">
 							<h5 class="w3-agilep">2021</h5>
-							<h4><a href="single.html">Diwali at SMS</a></h4> 
-							<p>This year (2021) at SMS, the DREAMS Club celebrated Diversity by hanging up colorful Diyas, colored in by students and staff at the SMS community!  </p>
+							<h4>DREAMS Winter Multi-Cultural Event</h4> 
+							<p>The DREAMS Club planned a multi-cultural event celebrating many holidays including Kwanzaa, Christmas, Hanukkah, and Bodhi Day. Throughout the event there were many fun activities and the DREAMS Club sold items for fundraising!</p>
 						</div>
 					</div>
 				</div>
@@ -118,11 +119,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</div>
 						<div class="news-w3imgtext">
 							<h5 class="w3-agilep">2021</h5>
-							<h4><a href="single.html">Indigenus People Month Event</a></h4> 
-							<p>
-								Indigenous Peoples Month Event 
-								
-								The month of November celebrates the Indigenous People of North America. The DREAMS Club held an education Bingo event to celebrate and teach our peers about Indigenous People. (2021-2022)</p> 
+							<h4>Diwali at SMS</h4> 
+							<p>This year (2021) at SMS, the DREAMS Club celebrated Diversity by hanging up colorful Diyas, colored in by students and staff at the SMS community!  </p> 
 							<a class="w3-agilebtn" href="https://docs.google.com/presentation/d/1AfFV5HvG_pWwQ2N8ztJApdXZ35EgaplpMOTrI0J-xiI/edit?usp=sharing"><span>Read More</span></a>
 						</div>
 					</div>
