--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<li><a href="index.html" class="active">Home</a></li>
 								<li><a href="#about">About</a></li> 
 								<li><a href="#event">Events</a></li> 
-								<li><a href="#team">Team</a></li> 
+								<li><a href="#team">Team</a></li>
+								<li><a href="https://www.etsy.com/shop/boardwalkbracelets0">Donate</a></li>
 								<li><a href="mailto://team@dreamsclub.tk">Contact</a></li>
 							</ul>
 						</div> 
@@ -189,6 +190,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li><a href="#about"><i class="fa fa-angle-right"></i> About</a></li> 
 						<li><a href="#event"><i class="fa fa-angle-right"></i> Events</a></li>
 						<li><a href="#team"><i class="fa fa-angle-right"></i> Team</a></li>
+						<li><a href="https://www.etsy.com/shop/boardwalkbracelets0"><i class="fa fa-angle-right"></i> Donate</a></li>
 						<li><a href="mailto://team@dreamsclub.tk"><i class="fa fa-angle-right"></i> Contact Us</a></li>
 					</ul>
 				</div>
