--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<a href="#"><img src="images/t1.jpg" alt="img"></a>
 							<div class="view-caption">
 								<div class="w3ls-info">
-									<h4>Lorelei Rood</h4> 
+									<h4>Lorelei Roof</h4> 
 									<p>Coordinator</p>
 								</div>
 							</div>    
