--- a/index.html
+++ b/index.html
@@ -206,8 +206,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="col-md-2 col-sm-6 footer-grid w3social">
 					<h3>Media</h3>
 					<ul>
-						<li><a href="#"><i class="fa fa-google-plus"></i>Google-plus</a></li>
-						<li><a href="#"><i class="fa fa-twitter"></i>Twitter</a></li>
+						<li><a href="https://www.instagram.com/dreamsclub.sms/"><i class="fa fa-instagram"></i>Instagram</a></li>
 					</ul>
 				</div>
 				<div class="clearfix"> </div>
